--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /.vs
+/hass-blueriiot/obj
+/hass-blueriiot/bin
+
