--- a/hass-blueriiot/hass-blueriiot.csproj
+++ b/hass-blueriiot/hass-blueriiot.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <PackageReference Include="MBW.Client.BlueRiiotApi" Version="0.8.5" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
+    <PackageReference Include="MQTTnet.Extensions.ManagedClient" Version="3.1.1" />
   </ItemGroup>
 
   <ItemGroup>
